hphp/hack/test/typecheck/reactive/test_rx_enabled2.php.exp
File "test_rx_enabled2.php", line 14, characters 10-25:
HH\Rx\IS_ENABLED must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
